# youtuber_classification

./: pyproject.toml  youtuber's_title_analysis.ipynb  youtuber's_title_analysis2.ipynb
