[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["e215749 <e215749@ie.u-ryukyu.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.45.1"
joblib = "^1.4.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
optuna = "^4.0.0"
lightgbm = "^4.5.0"
xgboost = "^2.1.1"
boruta = "^0.4.3"
bs4 = "^0.0.2"
neologdn = "^0.5.3"
fugashi = "^1.3.2"
ipadic = "^1.0.0"
japanize-matplotlib = "^1.1.3"
optuna-integration = "^4.0.0"
demoji = "^1.1.0"
mecab = "^0.996.5"
openpyxl = "^3.1.5"
protobuf = "^6.30.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
